--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
             <h6 class="pack-title">Package A</h6>
             <p>price: <strong>2.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
-            <button type="button" class="order">Choose</button>
+            <button type="button" class="order"><a href="#form">Choose</a></button>
 
         </li>
         <li>
@@ -81,7 +81,7 @@
             <h6 class="pack-title">Package B</h6>
             <p>price: <strong>5.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
-            <button type="button" class="order">Choose</button>
+            <button type="button" class="order"><a href="#form">Choose</a></button>
         </li>
         <li>
 
@@ -89,7 +89,7 @@
             <h6 class="pack-title">Package C</h6>
             <p>price: <strong>10.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
-            <button type="button" class="order">Choose</button>
+            <button type="button" class="order"><a href="#form">Choose</a></button>
         </li>
 
     </ul>
