--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Landing</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,9 +22,17 @@
         </div>
 
         <nav id="nav-bar">
-            <a class="nav-link" href="#info"><strong>Product-information</strong></a>
-            <a class="nav-link" href="#price"><strong>Price</strong></a>
-            <a class="nav-link" href="#contact"><strong>Contact</strong></a>
+            <ul>
+                <li>
+                    <a class="nav-link" href="#info"><strong>Product-information</strong></a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#price"><strong>Price</strong></a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#contact"><strong>Contact</strong></a>
+                </li>
+            </ul>
         </nav>
 
     </header>
