update style and logo with svg

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     <!-- this is navigation part -->
     <header id="header" class="flex-nav">
         <div class="logo">
-            <img id="header-img" src="https://github.com/Jo-Zh/Product-Landing-Page/raw/main/img/Logo.jpg" alt="logo" />
+            <img id="header-img" src="img/cakelogo.svg" alt="logo" />
         </div>
 
         <nav id="nav-bar">
@@ -77,7 +77,7 @@
 
     <ul id="Product-Packages" class="grid-price">
         <li>
-            <img src="https://github.com/Jo-Zh/Jo-Zh.github.io/raw/main/imagines/merrychristmas.jpg" alt="cupcake" />
+            <img src="img/apple-pie.png" alt="cupcake" />
             <h6 class="pack-title">Package A</h6>
             <p>price: <strong>2.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
@@ -86,7 +86,7 @@
         </li>
         <li>
 
-            <img src="https://github.com/Jo-Zh/Jo-Zh.github.io/raw/main/imagines/reactFood.jpeg" alt="cupcake" />
+            <img src="img/cherry-pie.png" alt="cupcake" />
             <h6 class="pack-title">Package B</h6>
             <p>price: <strong>5.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
@@ -94,7 +94,7 @@
         </li>
         <li>
 
-            <img src="https://github.com/Jo-Zh/Product-Landing-Page/raw/main/img/snowman-02.jpg" alt="cupcake" />
+            <img src="img/ChoclateCake.jpeg" alt="cupcake" />
             <h6 class="pack-title">Package C</h6>
             <p>price: <strong>10.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
