--- a/old/home.html
+++ b/old/home.html
@@ -18,7 +18,7 @@
     <!-- this is navigation part -->
     <header id="header" class="flex-nav">
         <div class="logo">
-            <img id="header-img" src="img/cakelogo.svg" alt="logo" />
+            <img id="header-img" src="../img/cakelogo.svg" alt="logo" />
         </div>
 
         <nav id="nav-bar">
@@ -33,12 +33,18 @@
                     <a class="nav-link" href="#contact"><strong>Contact</strong></a>
                 </li>
             </ul>
+            <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M15 6.675l-1.8-.6c-.2-.1-.3-.3-.2-.4l.9-1.7c.6-1.2-.7-2.5-1.9-1.9l-1.7.9c-.1.1-.3 0-.4-.2l-.6-1.8c-.4-1.3-2.2-1.3-2.6 0l-.6 1.8c-.1.2-.3.3-.4.2l-1.7-.9c-1.2-.6-2.5.7-1.9 1.9l.9 1.7c.1.1 0 .3-.2.4l-1.8.6c-1.3.4-1.3 2.3 0 2.7l1.8.6c.2 0 .3.2.2.3l-.9 1.7c-.6 1.2.7 2.5 1.9 1.9l1.7-.9c.2-.1.4 0 .4.2l.6 1.8c.4 1.3 2.3 1.3 2.7 0l.6-1.8c.1-.2.3-.3.4-.2l1.7.9c1.2.6 2.5-.7 1.9-1.9l-1-1.7c-.1-.2 0-.4.2-.4l1.8-.6c1.3-.4 1.3-2.2 0-2.6zm-7 3.7c-1.3 0-2.4-1.1-2.4-2.4 0-1.3 1.1-2.4 2.4-2.4 1.3 0 2.4 1.1 2.4 2.4 0 1.3-1.1 2.4-2.4 2.4z"
+                    fill="#4C4F5A"></path>
+            </svg>
+            <!-- <path d="M15 6.675l-1.8-.6c-.2-.1-.3-.3-.2-.4l.9-1.7c.6-1.2-.7-2.5-1.9-1.9l-1.7.9c-.1.1-.3 0-.4-.2l-.6-1.8c-.4-1.3-2.2-1.3-2.6 0l-.6 1.8c-.1.2-.3.3-.4.2l-1.7-.9c-1.2-.6-2.5.7-1.9 1.9l.9 1.7c.1.1 0 .3-.2.4l-1.8.6c-1.3.4-1.3 2.3 0 2.7l1.8.6c.2 0 .3.2.2.3l-.9 1.7c-.6 1.2.7 2.5 1.9 1.9l1.7-.9c.2-.1.4 0 .4.2l.6 1.8c.4 1.3 2.3 1.3 2.7 0l.6-1.8c.1-.2.3-.3.4-.2l1.7.9c1.2.6 2.5-.7 1.9-1.9l-1-1.7c-.1-.2 0-.4.2-.4l1.8-.6c1.3-.4 1.3-2.2 0-2.6zm-7 3.7c-1.3 0-2.4-1.1-2.4-2.4 0-1.3 1.1-2.4 2.4-2.4 1.3 0 2.4 1.1 2.4 2.4 0 1.3-1.1 2.4-2.4 2.4z" fill="#4C4F5A"></path> -->
         </nav>
 
     </header>
 
     <!-- this is product introduction part -->
-    <main class="flex-info">
+    <main class="flex-info-small flex-info">
         <h1 class="title">title</h1>
         <form id="form" action="http://localhost:7000/posts" method="POST">
             <label for="select">Select a Package to inquire</label>
@@ -77,7 +83,7 @@
 
     <ul id="Product-Packages" class="grid-price">
         <li>
-            <img src="img/apple-pie.png" alt="cupcake" />
+            <img src="../img/apple-pie.png" alt="cupcake" />
             <h6 class="pack-title">Package A</h6>
             <p>price: <strong>2.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
@@ -86,7 +92,7 @@
         </li>
         <li>
 
-            <img src="img/cherry-pie.png" alt="cupcake" />
+            <img src="../img/cherry-pie.png" alt="cupcake" />
             <h6 class="pack-title">Package B</h6>
             <p>price: <strong>5.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
@@ -94,7 +100,7 @@
         </li>
         <li>
 
-            <img src="img/ChoclateCake.jpeg" alt="cupcake" />
+            <img src="../img/ChoclateCake.jpeg" alt="cupcake" />
             <h6 class="pack-title">Package C</h6>
             <p>price: <strong>10.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
