index.css cannot add to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -135,12 +135,12 @@
             Ipsa nobis aut inventore sapiente reiciendis consequuntur commodi quidem eos harum dolorum quasi, optio
             officia suscipit aliquid?</p>
         <button type="button" class="btn btn-info">Show/Hide Video</button>
-        <div class="showVideo">
-            <iframe id="video" width="500" height="300" src="https://www.youtube.com/embed/8FxH9oXaJ00"
+        <!-- <div class="showVideo">
+            <iframe width="560" height="300" src="https://www.youtube.com/embed/dOjryZ6rOpE"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </div>
+        </div> -->
     </main>
 
 
