--- a/old/home.html
+++ b/old/home.html
@@ -69,7 +69,7 @@
             officia suscipit aliquid?</p>
         <button type="button" class="btn btn-info">Show/Hide Video</button>
         <div class="showVideo">
-            <iframe id="video" width="500" height="300" src="https://www.youtube.com/embed/8FxH9oXaJ00"
+            <iframe width="560" height="300" src="https://www.youtube.com/embed/dOjryZ6rOpE"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -78,9 +78,9 @@
     </main>
 
     <!-- products with price displayed here -->
-    <hr>
-    <h2 id="price">Product Packages</h2>
 
+    <h2 id="price">Product Packages</h2>
+    <hr>
     <ul id="Product-Packages" class="grid-price">
         <li>
             <img src="../img/apple-pie.png" alt="cupcake" />
