several changes to react components

--- a/old/home.html
+++ b/old/home.html
@@ -83,7 +83,7 @@
     <hr>
     <ul id="Product-Packages" class="grid-price">
         <li>
-            <img src="../img/apple-pie.png" alt="cupcake" />
+            <img src="../img/apple-pie.jpg" alt="cupcake" />
             <h6 class="pack-title">Package A</h6>
             <p>price: <strong>2.00AUD</strong><br>
                 Lorem ipsum dolor sit amet consectetur</p>
