--- a/public/index.html
+++ b/public/index.html
@@ -5,151 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="img/favicon.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="index.css">
     <title>Product Landing page</title>
-
-    <style>
-        * {
-            margin: 0;
-        }
-
-        :root {
-            --my-txt-color: #953f0c;
-            --my-bg-color: rgba(197, 106, 206, 0.4);
-            --my-link-color: #3fc3d4;
-            font-size: 20px;
-        }
-
-        body {
-            font-family: "Courier New", Courier, monospace;
-            text-align: center;
-            font-size: 1.2rem;
-        }
-
-        a:hover {
-            background: rgb(255, 217, 0, 0.5);
-        }
-
-        a:link,
-        a:visited {
-            color: var(--my-link-color, rgb(255, 217, 0));
-        }
-
-        /* Header and Navbar style with flex--------------------------------*/
-        .flex-nav {
-            display: flex;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            background-image: linear-gradient(60deg,
-                    rgba(255, 255, 255, 1) 0%,
-                    rgba(172, 74, 167, 0.3) 60%),
-                url("https://github.com/Jo-Zh/Product-Landing-Page/blob/main/img/nav-background.png?raw=true");
-
-            background-repeat: repeat;
-            justify-content: space-between;
-            box-shadow: 2px 2px 2px black;
-            font-size: 1.5rem;
-        }
-
-        nav {
-            flex-basis: 50%;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-            align-items: center;
-            color: var(--my-txt-color, orange);
-        }
-
-        nav>ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        #header-img {
-            width: 100px;
-            height: 100px;
-        }
-    </style>
 </head>
 
 <body>
-    <!-- this is navigation part -->
-    <header id="header" class="flex-nav">
-        <div class="logo">
-            <img id="header-img" src="../img/cakelogo.svg" alt="logo" />
-        </div>
-
-        <nav id="nav-bar">
-            <ul>
-                <li>
-                    <a class="nav-link" href="#info"><strong>Product-information</strong></a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#price"><strong>Price</strong></a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#contact"><strong>Contact</strong></a>
-                </li>
-            </ul>
-            <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M15 6.675l-1.8-.6c-.2-.1-.3-.3-.2-.4l.9-1.7c.6-1.2-.7-2.5-1.9-1.9l-1.7.9c-.1.1-.3 0-.4-.2l-.6-1.8c-.4-1.3-2.2-1.3-2.6 0l-.6 1.8c-.1.2-.3.3-.4.2l-1.7-.9c-1.2-.6-2.5.7-1.9 1.9l.9 1.7c.1.1 0 .3-.2.4l-1.8.6c-1.3.4-1.3 2.3 0 2.7l1.8.6c.2 0 .3.2.2.3l-.9 1.7c-.6 1.2.7 2.5 1.9 1.9l1.7-.9c.2-.1.4 0 .4.2l.6 1.8c.4 1.3 2.3 1.3 2.7 0l.6-1.8c.1-.2.3-.3.4-.2l1.7.9c1.2.6 2.5-.7 1.9-1.9l-1-1.7c-.1-.2 0-.4.2-.4l1.8-.6c1.3-.4 1.3-2.2 0-2.6zm-7 3.7c-1.3 0-2.4-1.1-2.4-2.4 0-1.3 1.1-2.4 2.4-2.4 1.3 0 2.4 1.1 2.4 2.4 0 1.3-1.1 2.4-2.4 2.4z"
-                    fill="#4C4F5A"></path>
-            </svg>
-            <!-- <path d="M15 6.675l-1.8-.6c-.2-.1-.3-.3-.2-.4l.9-1.7c.6-1.2-.7-2.5-1.9-1.9l-1.7.9c-.1.1-.3 0-.4-.2l-.6-1.8c-.4-1.3-2.2-1.3-2.6 0l-.6 1.8c-.1.2-.3.3-.4.2l-1.7-.9c-1.2-.6-2.5.7-1.9 1.9l.9 1.7c.1.1 0 .3-.2.4l-1.8.6c-1.3.4-1.3 2.3 0 2.7l1.8.6c.2 0 .3.2.2.3l-.9 1.7c-.6 1.2.7 2.5 1.9 1.9l1.7-.9c.2-.1.4 0 .4.2l.6 1.8c.4 1.3 2.3 1.3 2.7 0l.6-1.8c.1-.2.3-.3.4-.2l1.7.9c1.2.6 2.5-.7 1.9-1.9l-1-1.7c-.1-.2 0-.4.2-.4l1.8-.6c1.3-.4 1.3-2.2 0-2.6zm-7 3.7c-1.3 0-2.4-1.1-2.4-2.4 0-1.3 1.1-2.4 2.4-2.4 1.3 0 2.4 1.1 2.4 2.4 0 1.3-1.1 2.4-2.4 2.4z" fill="#4C4F5A"></path> -->
-        </nav>
-
-    </header>
-
-    <!-- this is product introduction part -->
-    <main class="flex-info-small flex-info">
-        <h1 class="title">title</h1>
-        <form id="form" action="http://localhost:7000/posts" method="POST">
-            <label for="select">Select a Package to inquire</label>
-            <select name="selection" id="selection">
-                <option value="" selected>--</option>
-                <option value="Package A">Package A</option>
-                <option value="Package B">Package B</option>
-                <option value="Package C">Package C</option>
-            </select>
-            <input type="hidden" id="submitpackage" name="submitpackage">
-            <label for="email">Your recipe will send through</label>
-            <input name="email" id="email" type="email" placeholder="enter email here..." required />
-            <label for="comments">Any comments:</label>
-            <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
-            <div style="display: inline;">
-                <input type="reset" value="Reset" />
-                <input id="submit" type="submit" value="Get Recipe" />
-            </div>
-        </form>
-        <p id="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos ex iusto repellat suscipit!
-            Ipsa nobis aut inventore sapiente reiciendis consequuntur commodi quidem eos harum dolorum quasi, optio
-            officia suscipit aliquid?</p>
-        <button type="button" class="btn btn-info">Show/Hide Video</button>
-        <!-- <div class="showVideo">
-            <iframe width="560" height="300" src="https://www.youtube.com/embed/dOjryZ6rOpE"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div> -->
-    </main>
-
 
 
     <div id="container">
-        {{indicator}}
+        <!-- {{indicator}} -->
     </div>
 
-    <!-- <script src="client.js"></script> -->
+    <script src="client.js"></script>
 </body>
 
 </html>
